# ha_magiqtouch

./: README.txt  magiqtouch.py  pyproject.toml
