[tool.poetry]
name = "magiqtouch"
version = "0.1.0"
description = ""
authors = ["Andrew Leech <andrew@alelec.net>"]

[tool.poetry.dependencies]
python = "^3.8"
#awsiotsdk = "^1.5.1"
AWSIoTPythonSDK = "^1.4.9"
#pycognito = "^0.1.4"
aiobotocore = "*"
#aiorequests = "^0.1.1"
botocore = "*"
boto3 = "*"
mandate = { git = "https://github.com/andrewleech/mandate.git" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
